# swirlc

./: .gitignore  Cargo.toml  Dockerfile  README.md  address_map.txt  l1.txt  message.txt  pyproject.toml  test-requirements.txt
examples/: l1.py  l2.py  ld.py
examples/1000genome/: build_python.sh  build_rust.sh  config.yml  source.swirl
examples/broadcast/: build_python.sh  build_rust.sh  config.yml  multifile.py  rotations.py  source.swirl
examples/gather/: build_python.sh  build_rust.sh  default.py
examples/scatter/: build_python.sh  build_rust.sh  config.yml  generator.py  source.swirl
logs/: L1.txt  LD.txt
rust_base/src/: amdahline.rs  comm.rs  lib.rs  utils.rs
src/: amdahline.rs  comm.rs  config.rs  l1.rs  ld.rs  main.rs  old_main.rs  utils.rs
src/amdahline/: mod.rs
src/locations/: location0.rs  location2.rs  mod.rs
src/orchestra/: broadcast.rs  mod.rs  receive.rs  send.rs  utils.rs
src/swirl/: broadcast.rs  exec.rs  mod.rs  receive.rs  send.rs
swirlc/: main.py  parser.py
swirlc/compiler/: __init__.py  default.py  rust.py  schema.py
swirlc/compiler/rust/: cargo_file.py  config_file.py  location_main.py  run_script.py  rust_lib.py  target.py
swirlc/compiler/rust/src/: config.rs  main.rs
swirlc/compiler/rust/src/locations/: location1.rs
swirlc/compiler/rust/src/orchestra/: mod.rs
swirlc/compiler/rust/src/swirl/: broadcast.rs  comm_old.rs  config.rs  exec.rs  mod.rs  receive.rs  send.rs
swirlc/translator/: dax_translator.py
