[package]
name = "swirl-crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1.40.0", features = ["full"] }
systemstat = "0.2.3"
serde_yml = "0.0.12"
lazy_static = "1.5.0"
bincode = "1.3.3"
strum = "0.26.3"
strum_macros = "0.26"
pathdiff = "0.2.2"
glob = "0.3.1"