[package]
name = "swirl-crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1.41.0", features = ["full"] }
lazy_static = "1.5.0"
bincode = "1.3.3"
strum = "0.26.3"
strum_macros = "0.26"
glob = "0.3.1"
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }